Fixes IE8 label wrapping issue

--- a/assets/_styles/_forms.scss
+++ b/assets/_styles/_forms.scss
@@ -109,7 +109,7 @@ legend {
   padding: 0;
   color: black;
   font-weight: 700;
-  display: block;
+  display: inline-block;
   .highlight-box & {
     float: left;
     width: 100%;
